# fig_remake

./: .gitignore  README.md  download_files.py  ena-file-download-selected-files-20250421-0722 copy.ps1  hello.py  pyproject.toml
fig_remake/: __main__.py  data_path.py  download_files.py  main.py  parse_ids.py  timing.py
fig_remake/res/: bowtie.sh  ena-file-download-selected-files-20250421-0722.sh
notebooks/: 01_download_fastq.ipynb  02_align_to_hg38.ipynb  NZ_CAKNDS010000021.1_lacZ.fasta  NZ_CAKNDS010000021.1_lacZ.gb  gene_download.ipynb
scripts/: rename.sh
tests/: data_path_test.py  mapping.ipynb  python_test.py
