[project]
name = "fig-remake"
version = "2025.4.21.0"
description = "Remake figures from a paper"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bowtie2-py>=2025.4.22.0",
    "fastqc-py>=2025.4.22.0",
    "samtools-py>=2025.4.23.0",
    "tqdm>=4.67.1",
]

[project.urls]
Repository = "https://github.com/soda92/fig_remake"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
packages = ["fig_remake"]
exclude = ["__pycache__", "*.pyc", "*.exe", "*.exe~", "*.syso"]

[tool.hatch.build.targets.wheel]
ignore-vcs = true
packages = ["fig_remake"]
exclude = ["__pycache__", "*.pyc", "*.exe~", "*.syso"]

[project.scripts]
fig_remake = "fig_remake.main:main"

[tool.ruff.format]
# Specifies the preferred quote style.
# Options are "double" (default) or "single".
quote-style = "single"

# Optional: other formatting settings
# indent-style = "space"
# skip-magic-trailing-comma = false